# LearnOpenGL

./: CMakeLists.txt  README.md  run_all.bat
config/: ROOT_PATH.h.in  config.in  config.out
data/shaders/01_Introduction/02_Triangle/: 02_Triangle_Blue.fs  02_Triangle_Red.fs
data/shaders/01_Introduction/04_Texture/: 04_Texture.vs
data/shaders/02_Lighting/02_BasicLighting/: lighting.fs
data/shaders/02_Lighting/03_Material/: lighting.fs
data/shaders/02_Lighting/05_LightCaster/: lighting.fs
data/shaders/02_Lighting/06_MultiLight/: lighting.fs
data/shaders/04_AdvanceOGL/01_DepthTest/: lighting.fs
data/shaders/04_AdvanceOGL/05_CubeMap/: transparent.vs
data/shaders/04_AdvanceOGL/06_UBO/: light.fs  (+3 more)
data/shaders/Common/: basic_P3N3T2.vs
include/: Camera.h  Shader.h
include/GLFW/: Glfw.h
include/LOGL/: Camera.h  CommonDefine.h  FBO.h  Mesh.h  Model.h  Shader.h  Texture.h  VAO.h
include/Ubpa/: Utility.h
include/Utility/: ArgManager.h  Array2D.h  Config.h  Cube.h  EventManager.h  File.h  GStorage.h  Image.h  ImageLoader.h  InfoLambdaOp.h  LStorage.h  LambdaOp.h  OpNode.h  OpQueue.h  Operation.h  Pool.h  Shape.h  Singleton.h  Sphere.h  Storage.h  Timer.h  Vec.h  Vec3.h  Vec4.h
notes/: C1.md  C2.md  C3.md  C4.md  C5.md  C6.md
src/: CMakeLists.txt
src/01_Introduction/01_CreateWindow/: 01_CreateWindow.cpp  CMakeLists.txt  main.cpp
src/01_Introduction/01_Window/: 01_Window.cpp  CMakeLists.txt
src/01_Introduction/02_Triangle/: 02_Triangle.cpp  02_Triangle_Blue.fs  CMakeLists.txt
src/01_Introduction/03_Shader/: 03_Shader.cpp  03_Shader.vs  CMakeLists.txt
src/01_Introduction/04_Texture/: 04_Texture.cpp  04_Texture.fs  CMakeLists.txt
src/01_Introduction/05_Transform/: 05_Transform.cpp  05_Transform.vs  CMakeLists.txt
src/01_Introduction/06_Coordinate/: 06_Coordinate.cpp  06_Coordinate.fs  06_Coordinate.vs  CMakeLists.txt
src/01_Introduction/07_Camera/: 07_Camera.cpp  07_Camera.vs  CMakeLists.txt  Defines.h  RegisterInput.cpp  RegisterInput.h
src/02_Lighting/: CMakeLists.txt
src/02_Lighting/01_Color/: 01_Color.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp
src/02_Lighting/02_BasicLighting/: 02_BasicLighting.cpp  Defines.h  RegisterInput.cpp
src/02_Lighting/03_Material/: 03_Material.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp  lighting.fs  lighting.vs
src/02_Lighting/04_LightingMap/: 04_LightingMap.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp  lighting.fs
src/02_Lighting/05_LightCaster/: 05_LightCaster.cpp  Defines.h
src/02_Lighting/06_MultiLight/: 06_MultiLight.cpp  CMakeLists.txt  Defines.h  lighting.fs
src/03_LoadModel/01_LoadModel/: 01_LoadModel.cpp  Defines.h  nanosuit.fs
src/04_AdvanceOGL/01_DepthTest/: 01_DepthTest.cpp  CMakeLists.txt  Defines.h  nanosuit.fs  nanosuit.vs
src/04_AdvanceOGL/02_StencilTest/: 02_StencilTest.cpp  Defines.h  RegisterInput.cpp
src/04_AdvanceOGL/03_Blend/: 03_Blend.cpp  Defines.h  RegisterInput.cpp  transparent.fs
src/04_AdvanceOGL/04_FrameBuffer/: 04_FrameBuffer.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp  postProcess.fs
src/04_AdvanceOGL/05_CubeMap/: 05_CubeMap.cpp  Defines.h  RegisterInput.cpp
src/04_AdvanceOGL/06_UBO/: 06_UBO.cpp  CMakeLists.txt  Defines.h  refract.fs
src/04_AdvanceOGL/07_GS/: 07_GS.cpp  Defines.h  house.gs  nanosuit.fs  nanosuit_explode.vs  nanosuit_normal.vs
src/04_AdvanceOGL/08_Instance/: 08_Instance.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp  instance.vs  nanosuit_normal.gs
src/05_AdvanceLighting/: CMakeLists.txt
src/05_AdvanceLighting/01_BlinnPhong/: 01_BlinnPhong.cpp  Defines.cpp  Defines.h  RegisterInput.cpp
src/05_AdvanceLighting/02_Gamma/: 02_Gamma.cpp  Defines.h  RegisterInput.cpp
src/05_AdvanceLighting/03_ShadowMap/: 03_ShadowMap.cpp  CMakeLists.txt  Defines.cpp  Defines.h  RegisterInput.cpp  depth.vs  shadow.vs
src/05_AdvanceLighting/04_PointShadow/: 04_PointShadow.cpp  CMakeLists.txt  Defines.h  shadow.fs
src/05_AdvanceLighting/05_NormalMap/: 05_NormalMap.cpp  Defines.h  RegisterInput.cpp  imgShow.fs  imgShow.vs  normalMap.fs
src/05_AdvanceLighting/06_ParallaxMap/: 06_ParallaxMap.cpp  Defines.h  RegisterInput.cpp  parallaxMap.vs
src/05_AdvanceLighting/07_HDR/: 07_HDR.cpp  Defines.h  RegisterInput.cpp
src/05_AdvanceLighting/08_Bloom/: 08_Bloom.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp
src/05_AdvanceLighting/09_DeferedShading/: 09_DeferedShading.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp
src/05_AdvanceLighting/10_SSAO/: 10_SSAO.cpp  CMakeLists.txt  Defines.h  RegisterInput.cpp  deferedShading.fs  gBuffer.fs  gBuffer.vs
src/LIBs/: CMakeLists.txt
src/LIBs/Camera/: CMakeLists.txt  Camera.cpp
src/LIBs/Glfw/: CMakeLists.txt  Glfw.cpp
src/LIBs/LOGL/: CMakeLists.txt
src/LIBs/LOGL/Camera/: CMakeLists.txt  Camera.cpp
src/LIBs/LOGL/FBO/: FBO.cpp
src/LIBs/LOGL/Glfw/: Glfw.cpp
src/LIBs/LOGL/Mesh/: CMakeLists.txt  Mesh.cpp
src/LIBs/LOGL/Model/: CMakeLists.txt  Model.cpp
src/LIBs/LOGL/Shader/: CMakeLists.txt  Shader.cpp
src/LIBs/LOGL/Texture/: CMakeLists.txt  Texture.cpp
src/LIBs/LOGL/VAO/: VAO.cpp
src/LIBs/Shader/: CMakeLists.txt  Shader.cpp
src/LIBs/Utility/: CMakeLists.txt  Utility.cpp
src/LIBs/Utility/ArgManager/: ArgManager.cpp
src/LIBs/Utility/Config/: Config.cpp
src/LIBs/Utility/EventManager/: EventManager.cpp
src/LIBs/Utility/File/: File.cpp
src/LIBs/Utility/Header/: CMakeLists.txt
src/LIBs/Utility/Image/: CMakeLists.txt  Image.cpp
src/LIBs/Utility/ImageLoader/: ImageLoader.cpp
src/LIBs/Utility/Operation/: CMakeLists.txt  LambdaOp.cpp  OpNode.cpp  OpQueue.cpp  Operation.cpp
src/LIBs/Utility/Pool/: Pool.cpp
src/LIBs/Utility/Shape/: CMakeLists.txt  Cube.cpp  Shape.cpp  Sphere.cpp
src/LIBs/Utility/Timer/: Timer.cpp
src/LIBs/glad/: CMakeLists.txt
(+20 files in other folders)
